src/objects/Bank__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Select_Bank__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Saving Account</fullName>
                    <default>true</default>
                    <label>Saving Account</label>
                </value>
                <value>
                    <fullName>Current Account</fullName>
                </value>
                <value>
                    <fullName>FD Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Minimum_Balance__c</fullName>
        <label>Minimum Balance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Select_Bank__c</fullName>
        <label>Select Bank</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>State Bank Of India</fullName>
                </value>
                <value>
                    <fullName>Axis Bank</fullName>
                </value>
                <value>
                    <fullName>Punjab National Bank</fullName>
                </value>
                <value>
                    <fullName>Bank of Baroda</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Bank</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Account Holder Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Banks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Minimum_Balance_Required</fullName>
        <active>false</active>
        <errorConditionFormula>IF( ISPICKVAL( Account_Type__c , &apos;Saving Account&apos;) ,  IF( Minimum_Balance__c &gt;=2000, false, true) ,  IF( ISPICKVAL( Account_Type__c , &apos;Current Account&apos;) ,  IF( Minimum_Balance__c &gt;=5000, false, true) , false) )</errorConditionFormula>
        <errorDisplayField>Minimum_Balance__c</errorDisplayField>
        <errorMessage>Please Mentain Minimum Balance is Required fire validation rule</errorMessage>
    </validationRules>
</CustomObject>